Added visualizer method that returns a pretty output of the boxes. Also added console outputs to methods for easier debugging in the future